--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@ body {
     margin: 0;
     width: auto;
     padding: 0;
+    height: 100%;
 }
 html {
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 main {
     display: flex;
@@ -13,10 +15,12 @@ main {
     flex-grow: 5;
     flex-shrink: 0;
     margin: auto;
-    padding-top: 138px;
-    align-content: flex-start;
-    justify-content: flex-end;
-    height: auto;
+    padding-top: 130px;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    height: 258.1px;
 }
 #top-bar {
     display: flex;
@@ -122,56 +126,172 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: auto;
+    padding-bottom: 25px;
+}
+
+#icons {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    flex-grow: 5;
+    flex-shrink: 0;
+    width: 100%;
+    margin: 0;
+    align-items: center;
+    justify-items: center;
+    height: 50px;
+}
+#icon-overlay {
+    flex-direction: row;
+    justify-self: center;
+    align-content: center;
+    margin-top: 260px;
+    width: 450px;
+    height: 41px;
+    display: flex;
 }
 #search-icon {
     display: flex;
-    position: absolute;
     align-self: flex-start;
-    margin-left: 247px;
     color: rgb(148, 147, 147);
     transform: scale(0.8);
+    margin-left: -55px;
+}
+#search-icon:hover {
+    cursor: default;
 }
 #mic-icon {
-    display: flex;
-    position: absolute;
+    display: inline-block;
+    position: relative;
     align-self: flex-end;
-    flex-basis: -251px;
     flex-grow: 1;
-    margin-left: -251px;
     color: blue;
     transform: scale(1.05);
+    margin-left: 510px;
+    padding-bottom: 18px;
+    cursor: pointer;
+}
+#mic-icon #tooltiptext {
+    visibility: hidden;
+    width: 100px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+    font-weight: bold;
+    padding: 5px 0;
+    padding-top: 6px;
+    border-radius: 2px;
+    height: 10px;
+    position: absolute;
+    top: 90%;
+    left: 93%;
+    margin-left: -60px;
+  }
+  
+#mic-icon:hover #tooltiptext {
+    visibility: visible;
+    cursor: pointer;
 }
 
-#search-box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100px;
+#mic-icon #tooltiptext::after {
+    content: " ";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent black transparent;
 }
-#search-box input {
-    width: 450px;
+
+#search-container {
+    display: flex;
+    width: 100%;
+    align-content: center;
+    justify-content: center;
+    position: absolute;
+    margin-top: 270px;
+    margin-left: auto;
+    margin-right: auto;
+    align-self: center;
+    justify-self: center;
+}
+#search-box {
+    display: block;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    align-self: center;
+    justify-self: center;
+    width: 580px;
     height: 41px;
     border-radius: 200px;
     border-style: solid;
     border-width: 1px;
     border-color: rgb(218, 218, 218);
-    font-size: 18px;
-    padding-left: 30px;
-    margin: auto;
+    background: none;
+    margin-top: 10px;
+    pointer-events: none;
 }
-#search-box input:focus {
-    width: 480px;
-    height: 43px;
+
+input {
+    display: block;
+    position: relative;
+    width: 500px;
+    margin-bottom: 30px;
+    height: 41px;
     border-radius: 200px;
-    border-style: solid;
+    border-style: none;
+    border-width: 1px;
+    border-color: rgb(218, 218, 218);
+    font-size: 18px;
+    background: none;
+}
+input:hover + #search-box {
+    width: 580px;
+    height: 41px;
+    box-shadow: 0px 3px 4px rgb(219, 219, 219);
+    background: none;
+}
+
+input:focus {
+    width: 500px;
+    height: 41px;
+    border-radius: 200px;
+    border-style: none;
     border-width: 1px;
     border-color: rgb(214, 214, 214);
     font-size: 18px;
-    padding-left: 30px;
     outline: none;
+    box-shadow: none;
+    background: none;
 }
+#search-box #tooltiptext {
+    visibility: hidden;
+    width: 60px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 5px 0;
+    padding-top: 4px;
+    border-radius: 2px;
+    height: 16px;
+    position: absolute;
+    top: 95%;
+    left: 55%;
+    margin-left: -60px;
+  }
+  
+input:hover + #search-box #tooltiptext {
+    visibility: visible;
+    cursor: pointer;
+}
+
 #search-buttons {
     display: flex;
     flex-direction: row;
@@ -215,15 +335,14 @@ main {
     color: rgb(41, 41, 41);
     text-decoration: none;
 }
-#space {
-    display: flex;
+#spacer {
+    display: block;
     flex-direction: column;
     flex-grow: 10;
     flex-wrap: wrap;
     flex-flow: column;
-    margin: 0;
-    padding: 0;
-    height: 452.499984px;
+    margin: auto;
+    height: 434px;
 }
 #bottom-bar {
     display: flex;
