--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,50 @@
-body {
-    margin: 0;
-    width: auto;
+#page-wrapper {
+    min-height: 100vh;
+    position: relative;
     padding: 0;
-    height: 100%;
+    margin: 0;
+}
+
+#content-wrapper {
+    padding-top: 48px;
+    padding-bottom: 40px;
+    width: 100%;
+    margin: 0;
+    padding-left: 0;
+    padding-right: 0;
+    height: auto;
+}
+body {
+    padding: 0;
+    margin: 0;
 }
 html {
     margin: 0;
     padding: 0;
-    height: 100%;
 }
 main {
     display: flex;
     flex-direction: column;
-    flex-grow: 5;
-    flex-shrink: 0;
-    margin: auto;
-    padding-top: 130px;
+    padding-top: 138px;
     align-content: center;
     justify-content: center;
     align-items: center;
     justify-items: center;
-    height: 258.1px;
 }
 #top-bar {
     display: flex;
+    position: absolute;
     background-color: white;
     flex-direction: row;
     flex-flow: row;
     height: 48px;
-    width: auto;
-    margin: 0;
+    width: 100%;
+    margin-top: 7px;
     align-items: center;
     align-content: center;
     justify-items: center;
     justify-content: space-between;
-    padding: 6px;
+    padding: 0;
 }
 .top-links {
     font-family: Arial, sans-serif;
@@ -50,6 +60,7 @@ main {
 }
 #top-left {
     display: block;
+    margin-left: 5px;
 }
 #about {
     margin-left: 15px;
@@ -66,6 +77,7 @@ main {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-right: 5px;
 }
 #gmail {
     font-size: 12px;
@@ -126,7 +138,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-bottom: 25px;
+    margin-top: 12px;
 }
 
 #icons {
@@ -145,7 +157,7 @@ main {
     flex-direction: row;
     justify-self: center;
     align-content: center;
-    margin-top: 260px;
+    margin-top: 295px;
     width: 450px;
     height: 41px;
     display: flex;
@@ -155,7 +167,7 @@ main {
     align-self: flex-start;
     color: rgb(148, 147, 147);
     transform: scale(0.8);
-    margin-left: -55px;
+    margin-left: -6px;
 }
 #search-icon:hover {
     cursor: default;
@@ -167,7 +179,7 @@ main {
     flex-grow: 1;
     color: blue;
     transform: scale(1.05);
-    margin-left: 510px;
+    margin-left: 415px;
     padding-bottom: 18px;
     cursor: pointer;
 }
@@ -225,22 +237,22 @@ main {
     margin-right: auto;
     align-self: center;
     justify-self: center;
-    width: 580px;
-    height: 41px;
+    width: 480px;
+    height: 43px;
     border-radius: 200px;
     border-style: solid;
     border-width: 1px;
-    border-color: rgb(218, 218, 218);
+    border-color: rgb(228, 228, 228);
     background: none;
-    margin-top: 10px;
+    margin-top: 30px;
     pointer-events: none;
 }
 
 input {
     display: block;
     position: relative;
-    width: 500px;
-    margin-bottom: 30px;
+    width: 400px;
+    margin-top: 43px;
     height: 41px;
     border-radius: 200px;
     border-style: none;
@@ -250,14 +262,14 @@ input {
     background: none;
 }
 input:hover + #search-box {
-    width: 580px;
+    width: 480px;
     height: 41px;
     box-shadow: 0px 3px 4px rgb(219, 219, 219);
     background: none;
 }
 
 input:focus {
-    width: 500px;
+    width: 400px;
     height: 41px;
     border-radius: 200px;
     border-style: none;
@@ -297,14 +309,13 @@ input:hover + #search-box #tooltiptext {
     flex-direction: row;
     justify-content: space-around;
     width: 292px;
-    margin: auto;
-    margin-top: 2px;
+    margin-top: 50px;
 
 }
 #search-buttons button {
     border-style: none;
     border-radius: 4px;
-    height: 35px;
+    height: 37px;
     width: 130px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
@@ -335,25 +346,18 @@ input:hover + #search-box #tooltiptext {
     color: rgb(41, 41, 41);
     text-decoration: none;
 }
-#spacer {
-    display: block;
-    flex-direction: column;
-    flex-grow: 10;
-    flex-wrap: wrap;
-    flex-flow: column;
-    margin: auto;
-    height: 434px;
-}
-#bottom-bar {
+
+#footer {
     display: flex;
+    position: absolute;
+    bottom: 0;
     background-color: rgb(241, 240, 240);
     height: 40px;
     width: 100%;
-    margin: 0;
     align-items: center;
     justify-content: space-between;
+    margin: 0;
     padding: 0;
-    flex-grow: 0;
 }
 .bottom-links {
     font-family: Arial, Helvetica, sans-serif;
@@ -368,29 +372,27 @@ input:hover + #search-box #tooltiptext {
     text-decoration: underline;
 }
 #bottom-left {
-    display: block;
     padding-left: 15px;
 }
 #advertising {
-    padding: 15px;
+    padding: 15px 15px 0px 15px;
 }
 #business {
-    padding: 15px;
+    padding: 15px 15px 0px 15px;
 }
 #how-search {
-    padding: 15px;
+    padding: 15px 15px 0px 15px;
 }
 
 #bottom-right {
     padding-right: 15px;
-
 }
 #privacy {
-    padding: 15px;
+    padding: 15px 15px 0px 15px;
 }
 #terms {
-    padding: 15px;
+    padding: 15px 15px 0px 15px;
 }
 #settings {
-    padding: 15px;
+    padding: 15px 15px 0px 15px;
 }
